--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.1/kakao.min.js"
     integrity="sha384-kDljxUXHaJ9xAb2AzRd59KxjrFjzHa5TAoFQ6GbYTCAG0bjM55XohjjDT7tDDC01"
     crossorigin="anonymous"></script>
-s  <title>
+  <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
 </head>
@@ -23,6 +23,6 @@ s  <title>
   <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
-<script src="vue-youtube/dist/vue-youtube.js"></script>s
+<script src="vue-youtube/dist/vue-youtube.js"></script>
 
 </html>
